deploy/k8s/common/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: phpmyadmin
  labels:
    run: phpmyadmin
spec:
  selector:
    run: phpmyadmin
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    run: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      run: phpmyadmin
  template:
    metadata:
      labels:
        run: phpmyadmin
    spec:
      restartPolicy: Always
      containers:
        - image: phpmyadmin/phpmyadmin:4.8
          imagePullPolicy: IfNotPresent
          name: phpmyadmin
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
