deploy/k8s/common/redis.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: redis
  labels:
    run: redis
spec:
  selector:
    run: redis
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30679
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: redis
  labels:
    run: redis
spec:
  selector:
    matchLabels:
      run: redis
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
        - name: redis
          image: redis
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - mountPath: /data
              name: redis-storage
      volumes: # 挂载持久卷到Pod
        - name: redis-storage # 持久卷名字， 与“volumMounts”名字匹配
          persistentVolumeClaim:
            claimName: redis-pvc # 持久卷申请名字
